--- a/Estilos.css
+++ b/Estilos.css
@@ -19,7 +19,7 @@ header{
     width: 100px;
     float: left;
     border-radius: 60%;
-    margin: 10px 20px 10px;
+    margin: 10px 30px 10px;
 }
 .Centrado{
     width: 90%;
@@ -47,14 +47,14 @@ header nav a{
     padding: 10px 20px;
 }
 header nav a:hover{
-    background: #a11818;
+    background: #0c0101;
     border-radius: 100px;
 }
 header nav a:active{
     background: #484846;
 }
 #Boton{
-    font-size: 100px;
+    font-size: 80px;
     background: #a11818;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
@@ -75,7 +75,7 @@ header nav a:active{
 }
 
 .Encabezados {
-    padding-top: 25px;
+    padding-top: 20px;
     text-align: center;
     font-size: 30px;
 }
@@ -83,7 +83,7 @@ header nav a:active{
     margin: 30px;
     padding-left: 50px;
 }
-ul{
+body section div ul{
     text-align: center;
     font-size: 20px;
 }
@@ -145,13 +145,16 @@ body section input {
 }
 
 body section div .ReglasJuego {
-    margin: 50px 200px 100px;
-    list-style-type: upper-roman;
+    margin: 35px 350px 100px;
+    list-style-type: decimal;
 }
 
 header nav div #tiempero {
-    display: inline-block;
-    color: #f3efef;
-    text-decoration: none;
-    padding: 10px 30px;
+    width: 100%;
+    overflow: hidden;
+    background: rgb(115, 104, 104);
+    margin-bottom: 20px;
+    position: fixed;
+    color: white;
 }
+
