--- a/Estilos.css
+++ b/Estilos.css
@@ -64,7 +64,7 @@ header nav a:active{
     color: white;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: auto;
+    margin-bottom: 100px;
     margin-top: 100px;
 }
 #Boton:hover{
@@ -109,6 +109,7 @@ body section div ul{
 
 #VideoExplicativo {
     margin: auto;
+    margin-bottom: 100px;
 }
 
 header nav div {
@@ -166,4 +167,8 @@ header nav div #tiempero {
 .ConsejosTablas {
     margin-right: 150px;
     margin-left: 150px;
+}
+.FotosAyudas {
+    width: 800px;
+    height: 500px;
 }
