--- a/Estilos.css
+++ b/Estilos.css
@@ -136,7 +136,7 @@ header nav div #puntaje {
     font-size: 25px;
     padding: 25px;
     text-align: center;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 body section input {
@@ -171,4 +171,34 @@ header nav div #tiempero {
 .FotosAyudas {
     width: 800px;
     height: 500px;
+    margin: 20px;
+}
+.linksVideos{
+    font-size: 30px;
+    font-family: Calibri;
+    color: #a11818;
+}
+.linksVideos:hover{
+    font-size: 35px;
+}
+.linksVideos:active{
+    color: blue;
+}
+#Fondo {
+    margin-bottom: 100px;
+}
+.CenJuego {
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+    padding-top: 250px;
+}
+.Numeros {
+    background: rgba(161, 24, 24, 0.69);
+    margin-left: 350px;
+    margin-right: 350px;
+    text-align: center;
+    height: 55px;
+    padding: 55px;
+
 }
