--- a/Estilos.css
+++ b/Estilos.css
@@ -212,6 +212,7 @@ header nav div #tiempero {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
+    margin-bottom: 50px;
     display: block;
     background-color: rgb(255, 255, 255);
 }
